The default limit on the number of non-alias domains can now be set in server templates.
Added a script installer for Z-push, which implements the Microsoft activesync protocol.
DNS aliases named 'webmail' and 'admin' are now created in all new virtual servers by default, and Apache is configured to redirect requests for them to Usermin and Webmin by default.
Added the Global Variables page under the System Customization category, for creating variables that can be used in all templates.
If the virus scanner fails to return a response within 30 seconds, email will be delivered normally. This avoids problems with the procmail timeout, which can cause even non-infected email to be dropped if clamav is too slow.
---- Changes since 3.60 ----
Updated the Piwik script installer to version 0.2.9, phpCOIN to 1.4.4, Joomla to 1.5.5, phpMyAdmin to 2.11.8.1, dotProject to 2.1.2, SugarCRM to 5.0.0g, Wordpress MU 2.6, Gallery to 2.3-rc-1, and Drupal to 5.9.
When the virtualmin --help command is run, it now outputs a list of all available API commands with short descriptions, broken down into categories.
Extra administrators can now have contact email addresses, which can be used when sending email to all domain owners. These can be set via the web interface, or the command-line API.
Added a Module Config option in the advanced section to change the path for the API helper command, and improved automatic selection of a path if the default directory /usr/sbin is not writable.
Third-party content styles can now be deleted by the master admin from the Content Styles page.
Added the --default-ip flag to modify-domain.pl, to revert to a shared IP address.
Custom links can be limited to virtual servers with a specific template if you have any custom templates defined, for more control over when each link is displayed.
Backups now include any custom template used to create virtual servers, which allow domains to be restored even on systems that do not yet have the original templates.